--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "dayjs": "^1.11.2",
     "echarts": "^4.9.0",
     "element-ui": "^2.13.0",
     "js-md5": "^0.7.3",
